--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@dotmind/utils",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx babel src --out-dir dist"
